fix restart issue on girhub pages

--- a/404.html
+++ b/404.html
@@ -25,6 +25,13 @@
       var pathSegmentsToKeep = 0;
 
       var l = window.location;
+
+      var routes = l.split("/")
+      if(routes.length > 1){
+        if(routes[1] == "games"){
+          pathSegmentsToKeep = 2
+        }
+      }
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
         l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
