--- a/games/sentenceverification1/index.html
+++ b/games/sentenceverification1/index.html
@@ -1,1 +1,73 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/games/sentenceverification1/Sentence-Verification-Global.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/games/sentenceverification1/manifest.json"/><title>Sentence Verification Global</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="../src/components/styles.css"><script defer="defer" src="/games/sentenceverification1/static/js/main.f1ed6ae8.js"></script><link href="/games/sentenceverification1/static/css/main.b6e57a1e.css" rel="stylesheet"></head><body><div id="root"></div><noscript>You need to enable JavaScript to run this app.</noscript></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+<!-- Single Page Apps fix for GitHub Pages -->
+
+	<script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        // This script checks to see if a redirect is present in the query string,
+        // converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        (function (l) {
+            if (l.search[1] === "/") {
+                var decoded = l.search
+                    .slice(1)
+                    .split("&")
+                    .map(function (s) {
+                        return s.replace(/~and~/g, "&");
+                    })
+                    .join("?");
+                window.history.replaceState(
+                    null,
+                    null,
+                    l.pathname.slice(0, -1) + decoded + l.hash,
+                );
+            }
+        })(window.location);
+    </script>
+	
+
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      href="/games/sentenceverification1/Sentence-Verification-Global.png"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="manifest" href="/games/sentenceverification1/manifest.json" />
+    <title>Sentence Verification Global</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../src/components/styles.css" />
+    <script
+      defer="defer"
+      src="/games/sentenceverification1/static/js/main.f1ed6ae8.js"
+    ></script>
+    <link
+      href="/games/sentenceverification1/static/css/main.b6e57a1e.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+  </body>
+</html>
