--- a/games/sentenceverification2/index.html
+++ b/games/sentenceverification2/index.html
@@ -1,1 +1,84 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/games/sentenceverification2/src/assests/images/logo.jpeg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/games/sentenceverification2/logo192.png"/><link rel="manifest" href="/games/sentenceverification2/manifest.json"/><link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5/dist/css/bootstrap-dark.min.css" rel="stylesheet"><link href="//db.onlinewebfonts.com/c/f21923cb0f60b46d41a66875255790b3?family=NHaasGroteskDSPro-65Md" rel="stylesheet"><title>React App</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><script defer="defer" src="/games/sentenceverification2/static/js/main.56b426b7.js"></script><link href="/games/sentenceverification2/static/css/main.7237b37d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+<!-- Single Page Apps fix for GitHub Pages -->
+
+	<script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        // This script checks to see if a redirect is present in the query string,
+        // converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        (function (l) {
+            if (l.search[1] === "/") {
+                var decoded = l.search
+                    .slice(1)
+                    .split("&")
+                    .map(function (s) {
+                        return s.replace(/~and~/g, "&");
+                    })
+                    .join("?");
+                window.history.replaceState(
+                    null,
+                    null,
+                    l.pathname.slice(0, -1) + decoded + l.hash,
+                );
+            }
+        })(window.location);
+    </script>
+	
+
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      href="/games/sentenceverification2/src/assests/images/logo.jpeg"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/games/sentenceverification2/logo192.png"
+    />
+    <link rel="manifest" href="/games/sentenceverification2/manifest.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5/dist/css/bootstrap-dark.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="//db.onlinewebfonts.com/c/f21923cb0f60b46d41a66875255790b3?family=NHaasGroteskDSPro-65Md"
+      rel="stylesheet"
+    />
+    <title>React App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      defer="defer"
+      src="/games/sentenceverification2/static/js/main.56b426b7.js"
+    ></script>
+    <link
+      href="/games/sentenceverification2/static/css/main.7237b37d.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"
+    ></script>
+  </body>
+</html>
