--- a/games/wsletters/index.html
+++ b/games/wsletters/index.html
@@ -1,1 +1,61 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="word.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/games/wsletters/logo192.png"/><link rel="manifest" href="/games/wsletters/manifest.json"/><link rel="icon" href="/games/wsletters/v2logo.png"/><title>WindowSequencingLetters</title><script defer="defer" src="/games/wsletters/static/js/main.312341b0.js"></script><link href="/games/wsletters/static/css/main.9d5ce756.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+<!-- Single Page Apps fix for GitHub Pages -->
+
+	<script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        // This script checks to see if a redirect is present in the query string,
+        // converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        (function (l) {
+            if (l.search[1] === "/") {
+                var decoded = l.search
+                    .slice(1)
+                    .split("&")
+                    .map(function (s) {
+                        return s.replace(/~and~/g, "&");
+                    })
+                    .join("?");
+                window.history.replaceState(
+                    null,
+                    null,
+                    l.pathname.slice(0, -1) + decoded + l.hash,
+                );
+            }
+        })(window.location);
+    </script>
+	
+
+    <meta charset="utf-8" />
+    <link rel="icon" href="word.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="/games/wsletters/logo192.png" />
+    <link rel="manifest" href="/games/wsletters/manifest.json" />
+    <link rel="icon" href="/games/wsletters/v2logo.png" />
+    <title>WindowSequencingLetters</title>
+    <script
+      defer="defer"
+      src="/games/wsletters/static/js/main.312341b0.js"
+    ></script>
+    <link
+      href="/games/wsletters/static/css/main.9d5ce756.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
