--- a/games/connectingletters/index.html
+++ b/games/connectingletters/index.html
@@ -1,68 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-<!-- Single Page Apps fix for GitHub Pages -->
-
-	<script type="text/javascript">
-        // Single Page Apps for GitHub Pages
-        // MIT License
-        // https://github.com/rafgraph/spa-github-pages
-        // This script checks to see if a redirect is present in the query string,
-        // converts it back into the correct url and adds it to the
-        // browser's history using window.history.replaceState(...),
-        // which won't cause the browser to attempt to load the new url.
-        // When the single page app is loaded further down in this file,
-        // the correct url will be waiting in the browser's history for
-        // the single page app to route accordingly.
-        (function (l) {
-            if (l.search[1] === "/") {
-                var decoded = l.search
-                    .slice(1)
-                    .split("&")
-                    .map(function (s) {
-                        return s.replace(/~and~/g, "&");
-                    })
-                    .join("?");
-                window.history.replaceState(
-                    null,
-                    null,
-                    l.pathname.slice(0, -1) + decoded + l.hash,
-                );
-            }
-        })(window.location);
-    </script>
-	
-
-    <meta charset="utf-8" />
-    <link rel="icon" href="/games/connectingletters/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="Connecting Letters" content="TAD Connecting Letters game" />
-    <link rel="apple-touch-icon" href="/games/connectingletters/favicon.ico" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="manifest" href="/games/connectingletters/manifest.json" />
-    <title>Connecting Letters</title>
-    <script
-      defer="defer"
-      src="/games/connectingletters/static/js/main.893a4db3.js"
-    ></script>
-    <link
-      href="/games/connectingletters/static/css/main.36c89565.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/games/connectingletters/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="Connecting Letters" content="TAD Connecting Letters game"/><link rel="apple-touch-icon" href="/games/connectingletters/favicon.ico"/><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><link rel="manifest" href="/games/connectingletters/manifest.json"/><title>Connecting Letters</title><script defer="defer" src="/games/connectingletters/static/js/main.2d5e7cf4.js"></script><link href="/games/connectingletters/static/css/main.36c89565.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
